// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StarshipClient verify should handle explorer verification failure 1`] = `
"Call: setConfig({"name":"osmojs","version":"v0.2.3","chains":[{"id":"osmosis-1","name":"osmosis","image":"pyramation/osmosis:v16.1.0","numValidators":1,"ports":{"rest":1317,"rpc":26657,"faucet":8007}},{"id":"cosmos-2","name":"cosmos","numValidators":1,"ports":{"rest":1313,"rpc":26653,"faucet":8003}}],"relayers":[{"name":"osmos-cosmos","type":"hermes","replicas":1,"chains":["osmosis-1","cosmos-2"]}],"registry":{"enabled":true,"ports":{"rest":8081,"grpc":9091}}})
Log: config again: [object Object]
Call: verify()
Log: Verifying services...
Log: FAILURE chain-osmosis-1 (rest): Explorer not available
Log: FAILURE chain-osmosis-1 (rpc): Block height is 0
Log: FAILURE chain-osmosis-1 (faucet): Chain faucet is not working
Log: SKIPPED chain-osmosis-1 (exposer): Port not found
Log: FAILURE chain-cosmos-2 (rest): Explorer not available
Log: FAILURE chain-cosmos-2 (rpc): Block height is 0
Log: FAILURE chain-cosmos-2 (faucet): Chain faucet is not working
Log: SKIPPED chain-cosmos-2 (exposer): Port not found
Log: SKIPPED relayer-osmos-cosmos (rest): Port not found
Log: SKIPPED relayer-osmos-cosmos (exposer): Port not found
Log: FAILURE registry (rest): Registry is not working
Log⬇

Some services failed verification. Please check the logs above.
EndLog⬆"
`;

exports[`StarshipClient verify should handle explorer verification failure 2`] = `""`;

exports[`StarshipClient verify should handle registry verification failure 1`] = `
"Call: setConfig({"name":"osmojs","version":"v0.2.3","chains":[{"id":"osmosis-1","name":"osmosis","image":"pyramation/osmosis:v16.1.0","numValidators":1,"ports":{"rest":1317,"rpc":26657,"faucet":8007}},{"id":"cosmos-2","name":"cosmos","numValidators":1,"ports":{"rest":1313,"rpc":26653,"faucet":8003}}],"relayers":[{"name":"osmos-cosmos","type":"hermes","replicas":1,"chains":["osmosis-1","cosmos-2"]}],"registry":{"enabled":true,"ports":{"rest":8081,"grpc":9091}}})
Log: config again: [object Object]
Call: verify()
Log: Verifying services...
Log: FAILURE chain-osmosis-1 (rest): Cannot read properties of undefined (reading '0')
Log: FAILURE chain-osmosis-1 (rpc): Block height is 0
Log: FAILURE chain-osmosis-1 (faucet): Chain faucet is not working
Log: SKIPPED chain-osmosis-1 (exposer): Port not found
Log: FAILURE chain-cosmos-2 (rest): Cannot read properties of undefined (reading '0')
Log: FAILURE chain-cosmos-2 (rpc): Block height is 0
Log: FAILURE chain-cosmos-2 (faucet): Chain faucet is not working
Log: SKIPPED chain-cosmos-2 (exposer): Port not found
Log: SKIPPED relayer-osmos-cosmos (rest): Port not found
Log: SKIPPED relayer-osmos-cosmos (exposer): Port not found
Log: FAILURE registry (rest): Registry not available
Log⬇

Some services failed verification. Please check the logs above.
EndLog⬆"
`;

exports[`StarshipClient verify should handle registry verification failure 2`] = `""`;

exports[`StarshipClient verify should handle relayer verification failure 1`] = `
"Call: setConfig({"name":"osmojs","version":"v0.2.3","chains":[{"id":"osmosis-1","name":"osmosis","image":"pyramation/osmosis:v16.1.0","numValidators":1,"ports":{"rest":1317,"rpc":26657,"faucet":8007}},{"id":"cosmos-2","name":"cosmos","numValidators":1,"ports":{"rest":1313,"rpc":26653,"faucet":8003}}],"relayers":[{"name":"osmos-cosmos","type":"hermes","replicas":1,"chains":["osmosis-1","cosmos-2"]}],"registry":{"enabled":true,"ports":{"rest":8081,"grpc":9091}}})
Log: config again: [object Object]
Call: verify()
Log: Verifying services...
Log: FAILURE chain-osmosis-1 (rest): Cannot read properties of undefined (reading '0')
Log: FAILURE chain-osmosis-1 (rpc): Block height is 0
Log: FAILURE chain-osmosis-1 (faucet): Chain faucet is not working
Log: SKIPPED chain-osmosis-1 (exposer): Port not found
Log: FAILURE chain-cosmos-2 (rest): Cannot read properties of undefined (reading '0')
Log: FAILURE chain-cosmos-2 (rpc): Block height is 0
Log: FAILURE chain-cosmos-2 (faucet): Chain faucet is not working
Log: SKIPPED chain-cosmos-2 (exposer): Port not found
Log: SKIPPED relayer-osmos-cosmos (rest): Port not found
Log: SKIPPED relayer-osmos-cosmos (exposer): Port not found
Log: FAILURE registry (rest): Registry is not working
Log⬇

Some services failed verification. Please check the logs above.
EndLog⬆"
`;

exports[`StarshipClient verify should handle relayer verification failure 2`] = `""`;

exports[`StarshipClient verify should skip disabled services 1`] = `
"Call: setConfig({"name":"osmojs","version":"v0.2.3","chains":[{"id":"osmosis-1","name":"osmosis","image":"pyramation/osmosis:v16.1.0","numValidators":1,"ports":{"rest":1317,"rpc":26657,"faucet":8007}},{"id":"cosmos-2","name":"cosmos","numValidators":1,"ports":{"rest":1313,"rpc":26653,"faucet":8003}}],"relayers":[{"name":"osmos-cosmos","type":"hermes","replicas":1,"chains":["osmosis-1","cosmos-2"]}],"registry":{"enabled":false,"ports":{"rest":8081,"grpc":9091}},"explorer":{"enabled":false}})
Log: config again: [object Object]
Call: verify()
Log: Verifying services...
Log: FAILURE chain-osmosis-1 (rest): Cannot read properties of undefined (reading '0')
Log: FAILURE chain-osmosis-1 (rpc): Block height is 0
Log: FAILURE chain-osmosis-1 (faucet): Chain faucet is not working
Log: SKIPPED chain-osmosis-1 (exposer): Port not found
Log: FAILURE chain-cosmos-2 (rest): Cannot read properties of undefined (reading '0')
Log: FAILURE chain-cosmos-2 (rpc): Block height is 0
Log: FAILURE chain-cosmos-2 (faucet): Chain faucet is not working
Log: SKIPPED chain-cosmos-2 (exposer): Port not found
Log: SKIPPED relayer-osmos-cosmos (rest): Port not found
Log: SKIPPED relayer-osmos-cosmos (exposer): Port not found
Log⬇

Some services failed verification. Please check the logs above.
EndLog⬆"
`;

exports[`StarshipClient verify should skip disabled services 2`] = `""`;

exports[`StarshipClient verify should verify all services successfully 1`] = `
"Call: setConfig({"name":"starship","version":"v0.2.3","chains":[{"id":"osmosis-1","name":"osmosis","image":"pyramation/osmosis:v16.1.0","numValidators":1,"ports":{"rest":1317,"rpc":26657,"faucet":8007}},{"id":"cosmos-2","name":"cosmos","numValidators":1,"ports":{"rest":1313,"rpc":26653,"faucet":8003}}],"relayers":[{"name":"osmos-cosmos","type":"hermes","replicas":1,"chains":["osmosis-1","cosmos-2"]}],"registry":{"enabled":true,"ports":{"rest":8081,"grpc":9091}}})
Log: config again: [object Object]
Call: verify()
Log: Verifying services...
Log: FAILURE chain-osmosis-1 (rest): Cannot read properties of undefined (reading '0')
Log: FAILURE chain-osmosis-1 (rpc): Block height is 0
Log: FAILURE chain-osmosis-1 (faucet): Chain faucet is not working
Log: SKIPPED chain-osmosis-1 (exposer): Port not found
Log: FAILURE chain-cosmos-2 (rest): Cannot read properties of undefined (reading '0')
Log: FAILURE chain-cosmos-2 (rpc): Block height is 0
Log: FAILURE chain-cosmos-2 (faucet): Chain faucet is not working
Log: SKIPPED chain-cosmos-2 (exposer): Port not found
Log: SKIPPED relayer-osmos-cosmos (rest): Port not found
Log: SKIPPED relayer-osmos-cosmos (exposer): Port not found
Log: SUCCESS registry (rest): Registry is working
Log⬇

Some services failed verification. Please check the logs above.
EndLog⬆"
`;

exports[`StarshipClient verify should verify all services successfully 2`] = `""`;
